# Pronto_Estimator_ros2

./: README.md
install/: local_setup.sh  setup.sh
install/pronto_core/include/pronto_core/: definitions.hpp  gps_module.hpp  indexed_meas_module.hpp  init_message_module.hpp  ins_module.hpp  lidar_odometry_module.hpp  pose_meas_module.hpp  pronto_core.hpp  rbis.hpp  rbis_update_interface.hpp  rigidbody.hpp  rotations.hpp  scan_matcher_module.hpp  sensing_module.hpp  state_est.hpp  update_history.hpp  vicon_module.hpp  visibility_control.h  visual_odometry_module.hpp
install/pronto_core/share/pronto_core/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pronto_msgs/share/pronto_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pronto_quadruped/include/pronto_quadruped/: DataLogger.hpp  DynamicStanceEstimator.hpp  FlexEstimator.hpp  FootSensorStanceDetector.hpp  ForceSensorStanceEstimator.hpp  ImuBiasLock.hpp  InverseSchmittTrigger.hpp  LegOdometer.hpp  LegOdometerBase.hpp  StanceEstimator.hpp  StanceEstimatorBase.hpp  pronto_quadruped.hpp  visibility_control.h
install/pronto_quadruped/share/pronto_quadruped/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pronto_quadruped_commons/include/pronto_quadruped_commons/: declarations.h  feet_contact_forces.h  feet_jacobians.h  forward_kinematics.h  inertia_properties.h  inverse_dynamics.h  inverse_kinematics.h  joint_bool_map.h  joint_data_map.h  joint_id_tricks.h  jsim.h  leg_bool_map.h  leg_data_map.h  leg_vector_map.h  link_data_map.h  transforms.h
install/pronto_quadruped_commons/share/pronto_quadruped_commons/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pronto_ros/share/pronto_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pronto_utils/include/pronto_utils/: BlipFilter.hpp  (+20 more)
log/: latest_build
pronto_core/: CMakeLists.txt  package.xml
pronto_core/include/pronto_core/: pronto_core.hpp  rbis.hpp  rigidbody.hpp  scan_matcher_module.hpp  visibility_control.h
pronto_core/src/: ins_module.cpp  pronto_core.cpp  rbis_update_interface.cpp  state_est.cpp
pronto_msgs/: CMakeLists.txt
pronto_msgs/msg/: IndexedMeasurement.msg  JointStateWithAcceleration.msg  VisualOdometryUpdate.msg
pronto_quadruped/: CMakeLists.txt
pronto_quadruped/include/pronto_quadruped/: DataLogger.hpp  ForceSensorStanceEstimator.hpp  InverseSchmittTrigger.hpp  LegOdometer.hpp  LegOdometerBase.hpp  StanceEstimator.hpp  StanceEstimatorBase.hpp
pronto_quadruped/src/: DataLogger.cpp  LegOdometer.cpp  StanceEstimator.cpp  pronto_quadruped.cpp
pronto_quadruped_commons/: package.xml
pronto_quadruped_commons/include/pronto_quadruped_commons/: feet_contact_forces.h  leg_vector_map.h
pronto_quadruped_ros/: CMakeLists.txt
pronto_quadruped_ros/include/pronto_quadruped_ros/: bias_lock_handler_ros.hpp  conversions.hpp  dynamic_stance_estimator_ros.hpp  foor_sensor_stance_detector_ros.hpp  force_sensor_stance_estimator_ros.hpp  leg_odometer_ros.hpp  legodo_handler_ros.hpp  stance_estimator_ros.hpp
pronto_quadruped_ros/src/: bias_lock_handler_ros.cpp  conversions.cpp  dynamic_stance_estimator_ros.cpp  force_sensor_stance_estimator_ros.cpp  leg_odometer_ros.cpp  legodo_handler_ros.cpp  pronto_quadruped_ros.cpp
pronto_ros/: CMakeLists.txt
pronto_ros/include/pronto_ros/: index_meas_ros_handler.hpp  ins_ros_handler.hpp  pose_msg_ros_handler.hpp  pronto_node.hpp  pronto_ros_conversions.hpp  scan_matcher_ros_handler.hpp  visibility_control.h
pronto_ros/launch/: pronto_ros.launch.py
pronto_ros/src/: init_message_ros_handler.cpp  ins_ros_handler.cpp  joint_state_with_acceleration_republisher.cpp  pose_msg_ros_handler.cpp  pronto_ros_conversions.cpp  pronto_ros_node.cpp  ros_frontend.cpp  scan_matcher_ros_handler.cpp
pronto_ros2/: CMakeLists.txt  package.xml
pronto_ros2/config/: state_estimator.yaml  state_estimator.yaml.bak
pronto_ros2/include/pronto_ros2/: ins_ros_handler.hpp  pronto_ros2_node.hpp  pronto_ros2_node.inl
pronto_ros2/launch/: pronto_ros.launch.py
pronto_ros2/src/: entrypoint.cpp  ins_ros_handler.cpp  pronto_ros2_node.cpp  pronto_ros_conversions.cpp
pronto_ros2_controller/: CMakeLists.txt  package.xml
pronto_ros2_controller/include/pronto_ros2_controller/: exteroceptive_sensor_sensor_manager.hpp  legodom_manager.hpp  pronto_controller.hpp  proprioceptive_sensor_manager.hpp
pronto_ros2_controller/src/: legodom_manager.cpp  pronto_controller.cpp  proprioceptive_sensor_manager.cpp  quad_model_parser.cpp  test_node.cpp
pronto_solo12/: CMakeLists.txt  package.xml
pronto_solo12/config/: prova.urdf  solo12.urdf  solo12_model.urdf  state_estimator.yaml
pronto_solo12/include/pronto_solo12/: definitions.hpp  dynamics.hpp  feet_contact_forces.hpp  feet_jacobians.hpp  forward_kinematics.hpp  pronto_mammal_utilities.hpp
pronto_solo12/launch/: pronto_estimator.launch.py
pronto_solo12/src/: dynamics.cpp  feet_contact_forces.cpp  feet_jacobians.cpp  forward_kinematics.cpp  pinocchio_pronto_quadruped_model.cpp  pronto_estimator.cpp  pronto_mammal_utilities.cpp  pronto_solo12_node.cpp  prova.cpp
pronto_tuning/: CMakeLists.txt  package.xml
pronto_tuning/config/: Exp_1_cmd.yaml  Exp_2_cmd.yaml  Exp_3_cmd.yaml  Exp_4_cmd.yaml  straight_motion.yaml  tuning_node_param.yaml
pronto_tuning/launch/: cmd_rec.launch.py  command_tuning.launch.py  experiments_pronto.launch.py  filter_tuning.launch.py
pronto_tuning/src/: command_node.cpp  tuning_node.cpp
pronto_utils/: CMakeLists.txt
pronto_utils/include/pronto_utils/: SignalTap.hpp  TrapezoidalInt.hpp  alpha_filter.hpp  backlash_filter.hpp  kalman_filter.hpp  simple_kalman_filter.hpp
pronto_utils/src/: SchmittTrigger.cpp
(+290 files in other folders)
